# openai-api-rs

./: .gitignore  Cargo.toml
src/: chat_api.rs  main.rs
src/chat_api/: chat_req.rs  chat_res.rs
src/services/: chat.rs
