[package]
name = "openai-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = {version = "0.11.14",features = ["json"]}
serde = { version = "1", features = ["derive"] } # 序列化/反序列化数据
serde_json = "1.0.93"
